# quote-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  credentials.txt
.sqlx/: query-0439bb4200822987436f4c403a55945d27168b46c46fc0fc3402856da567324f.json  query-05243ccaaef6d7e47dd730d0216bf836f0b55a385cfcc456495014d43682ece0.json  query-21860df1be1679e0a5f735c3560e81563a773ebc2f581ae1e7ceb5a98aa21085.json  query-3237b78b2e62a906c99cfb17a5c00bff1dbcb2b72fcc864e95aadb12473dc9d1.json  query-3345ffa406c3d922ed67f78cdadbf5e65b41472e8f30771d8e9fa2b1aa03ebbb.json  query-3495628ccdd1eb7a2e3980e7b04c1544934b7b7eb4386c32e9d8f74697921e3d.json  query-3e787b19dcd2e6d4f8122c5ae3808997bdad00e3c5c65eff2a99eb6c120705d7.json  query-4d5440fad6e782ea1fd9111d0c30ad738260f602b9e5eb604b33ab699d27757e.json  query-7fe9d65c7a594cf02d0dd462fda28bdb89ddcdca07de1d44223903e2eadd9cb8.json  query-824a05c51ded598612711a4821d47652a1b077bbeda86a442a7e8fd6bb994dd6.json  query-83a00bf993a0b844e2b6e63b0b0aa946fdcc1010e462366d4d0f5df10ea2825a.json  query-88e9babe9e710f4537cc55b1aff13640648f2b6e973207785038ba01abd512a6.json  query-8a2061e5ee53ef64603de41d2071ec5f93e874ad4ae6eac7c5dc9ea24148accd.json  query-9d28e64f63a7c063c61925cffacf9399cb183d589ee257b68d8122b0328a3db9.json  query-a2a9d2fdbe375777c083ac7159adfb81f4377d927c3badbd8df2938679cc217c.json  query-a6d61f12929700741b1a4486af4f8bc8e7875bf41dc08bc634dd2dc9fa3fb03d.json  query-bf85fe1cd0540d0ad7629052713d9bd44fd679db05cd14ece84a63df76bf214a.json  query-d58c51ae65fdfae8735f5b2ad64b96d3d4b1e9acafda7fb09c7fb10b6b688864.json  query-eaba563a178c5af78958108b30b7da86a076d7bbcea1a15294fdf84de1b63ad8.json  (+1 more)
src/: api.rs  authjwt.rs  (+3 more)
(+12 files in other folders)
