[package]
name = "quote-server"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.3"
fastrand = "2.3.0"
mime = "0.3.17"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
http-body-util = "0.1.3"
tower = "0.5.2"
displaydoc = "0.2.5"
pretty-error-debug = "0.3.1"
chrono = { version = "0.4.35", features = ["serde"] }
csv = "1.3.0"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.tower-http]
version = "0.6.2"
features = ["cors", "fs", "trace"]

[dependencies.tracing-subscriber]
version = "0.3.19"
features = ["env-filter"]

[dependencies.sqlx]
version = "0.8.5"
features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"]

[dependencies.utoipa]
#version = "5.3.1"
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-axum]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"

[dependencies.utoipa-rapidoc]
#version = "6.0.0"
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]

[dependencies.utoipa-redoc]
#version = "6.0.0"
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]

[dependencies.utoipa-swagger-ui]
git = "https://github.com/juhaku/utoipa.git"
rev = "cecda0531bf7d90800af66b186055932ee730526"
features = ["axum"]
